docs/apis/rest-api/v1/order-notes.mdx
---
sidebar_position: 7
sidebar_label: 'Order notes'
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

# Order notes
The order notes API allows you to create, view, and delete individual order notes.  
Order notes are added by administrators and programmatically to store data about an order, or order events.

## Order note properties
|    Attribute    |    Type   |                                                     Description                                                     |
|-----------------|-----------|---------------------------------------------------------------------------------------------------------------------|
| `id`            | integer   | Unique identifier for the resource. `READ-ONLY`                                       |
| `date_created`  | date-time | The date the order note was created, in the site's timezone. `READ-ONLY`              |
| `note`          | string    | Order note. `REQUIRED`                                                                |
| `customer_note` | boolean   | Shows/define if the note is only for reference or for the customer (the user will be notified). Default is `false`. |

## Create an order note
This API helps you to create a new note for an order.

```http
POST /wp-json/wc/v1/orders/<id>/notes
```

<Tabs>
  <TabItem value="curl" label="cURL">

```shell
curl -X POST https://example.com/wp-json/wc/v1/orders/645/notes \
	-u consumer_key:consumer_secret \
	-H "Content-Type: application/json" \
	-d '{
  "note": "Order ok!!!"
}'
```

  </TabItem>
  <TabItem value="js" label="JavaScript">

```javascript
const data = {
  note: "Order ok!!!"
};

PooCommerce.post("orders/645/notes", data)
  .then((response) => {
    console.log(response.data);
  })
  .catch((error) => {
    console.log(error.response.data);
  });
```

  </TabItem>
  <TabItem value="php" label="PHP">

```php
<?php
$data = [
    'note' => 'Order ok!!!'
];

print_r($poocommerce->post('orders/645/notes', $data));
?>
```

  </TabItem>
  <TabItem value="python" label="Python">

```python
data = {
    "note": "Order ok!!!"
}

print(wcapi.post("orders/645/notes", data).json())
```

  </TabItem>
  <TabItem value="ruby" label="Ruby">

```ruby
data = {
  note: "Order ok!!!"
}

poocommerce.post("orders/645/notes", data).parsed_response
```

  </TabItem>
  <TabItem value="response" label="JSON Response">

```json
{
  "id": 51,
  "date_created": "2016-05-13T20:51:55",
  "note": "Order ok!!!",
  "customer_note": false,
  "_links": {
    "self": [
      {
        "href": "https://example.com/wp-json/wc/v1/orders/118/notes/51"
      }
    ],
    "collection": [
      {
        "href": "https://example.com/wp-json/wc/v1/orders/118/notes"
      }
    ],
    "up": [
      {
        "href": "https://example.com/wp-json/wc/v1/orders/118"
      }
    ]
  }
}
```

  </TabItem>
</Tabs>

## Retrieve an order note
This API lets you retrieve and view a specific note from an order.

```http
GET /wp-json/wc/v1/orders/<id>/notes/<note_id>
```

<Tabs>
  <TabItem value="curl" label="cURL">

```shell
curl https://example.com/wp-json/wc/v1/orders/645/notes/51 \
	-u consumer_key:consumer_secret
```

  </TabItem>
  <TabItem value="js" label="JavaScript">

```javascript
PooCommerce.get("orders/645/notes/51")
  .then((response) => {
    console.log(response.data);
  })
  .catch((error) => {
    console.log(error.response.data);
  });
```

  </TabItem>
  <TabItem value="php" label="PHP">

```php
<?php print_r($poocommerce->get('orders/645/notes/51')); ?>
```

  </TabItem>
  <TabItem value="python" label="Python">

```python
print(wcapi.get("orders/645/notes/51").json())
```

  </TabItem>
  <TabItem value="ruby" label="Ruby">

```ruby
poocommerce.get("orders/645/notes/51").parsed_response
```

  </TabItem>
  <TabItem value="response" label="JSON Response">

```json
{
  "id": 51,
  "date_created": "2016-05-13T20:51:55",
  "note": "Order ok!!!",
  "customer_note": false,
  "_links": {
    "self": [
      {
        "href": "https://example.com/wp-json/wc/v1/orders/118/notes/51"
      }
    ],
    "collection": [
      {
        "href": "https://example.com/wp-json/wc/v1/orders/118/notes"
      }
    ],
    "up": [
      {
        "href": "https://example.com/wp-json/wc/v1/orders/118"
      }
    ]
  }
}
```

  </TabItem>
</Tabs>

## List all order notes
This API helps you to view all the notes from an order.

```http
GET /wp-json/wc/v1/orders/<id>/notes
```

<Tabs>
  <TabItem value="curl" label="cURL">

```shell
curl https://example.com/wp-json/wc/v1/orders/645/notes \
	-u consumer_key:consumer_secret
```

  </TabItem>
  <TabItem value="js" label="JavaScript">

```javascript
PooCommerce.get("orders/645/notes")
  .then((response) => {
    console.log(response.data);
  })
  .catch((error) => {
    console.log(error.response.data);
  });
```

  </TabItem>
  <TabItem value="php" label="PHP">

```php
<?php print_r($poocommerce->get('orders/645/notes')); ?>
```

  </TabItem>
  <TabItem value="python" label="Python">

```python
print(wcapi.get("orders/645/notes").json())
```

  </TabItem>
  <TabItem value="ruby" label="Ruby">

```ruby
poocommerce.get("orders/645/notes").parsed_response
```

  </TabItem>
  <TabItem value="response" label="JSON Response">

```json
[
  {
    "id": 51,
    "date_created": "2016-05-13T20:51:55",
    "note": "Order ok!!!",
    "customer_note": false,
    "_links": {
      "self": [
        {
          "href": "https://example.com/wp-json/wc/v1/orders/118/notes/51"
        }
      ],
      "collection": [
        {
          "href": "https://example.com/wp-json/wc/v1/orders/118/notes"
        }
      ],
      "up": [
        {
          "href": "https://example.com/wp-json/wc/v1/orders/118"
        }
      ]
    }
  },
  {
    "id": 46,
    "date_created": "2016-05-03T18:10:43",
    "note": "Order status changed from Pending Payment to Processing.",
    "customer_note": false,
    "_links": {
      "self": [
        {
          "href": "https://example.com/wp-json/wc/v1/orders/118/notes/46"
        }
      ],
      "collection": [
        {
          "href": "https://example.com/wp-json/wc/v1/orders/118/notes"
        }
      ],
      "up": [
        {
          "href": "https://example.com/wp-json/wc/v1/orders/118"
        }
      ]
    }
  }
]
```

  </TabItem>
</Tabs>

## Delete an order note
This API helps you delete an order note.

```http
DELETE /wp-json/wc/v1/orders/<id>/notes/<note_id>
```

<Tabs>
  <TabItem value="curl" label="cURL">

```shell
curl -X DELETE https://example.com/wp-json/wc/v1/orders/645/notes/51?force=true \
	-u consumer_key:consumer_secret
```

  </TabItem>
  <TabItem value="js" label="JavaScript">

```javascript
PooCommerce.delete("orders/645/notes/51", {
  force: true
})
  .then((response) => {
    console.log(response.data);
  })
  .catch((error) => {
    console.log(error.response.data);
  });
```

  </TabItem>
  <TabItem value="php" label="PHP">

```php
<?php print_r($poocommerce->delete('orders/645/notes/51', ['force' => true])); ?>
```

  </TabItem>
  <TabItem value="python" label="Python">

```python
print(wcapi.delete("orders/645/notes/51", params={"force": True}).json())
```

  </TabItem>
  <TabItem value="ruby" label="Ruby">

```ruby
poocommerce.delete("orders/645/notes/51", force: true).parsed_response
```

  </TabItem>
  <TabItem value="response" label="JSON Response">

```json
{
  "id": 51,
  "date_created": "2016-05-13T20:51:55",
  "note": "Order ok!!!",
  "customer_note": false,
  "_links": {
    "self": [
      {
        "href": "https://example.com/wp-json/wc/v1/orders/118/notes/51"
      }
    ],
    "collection": [
      {
        "href": "https://example.com/wp-json/wc/v1/orders/118/notes"
      }
    ],
    "up": [
      {
        "href": "https://example.com/wp-json/wc/v1/orders/118"
      }
    ]
  }
}
```

  </TabItem>
</Tabs>
#### Available parameters
| Parameter |  Type  |                          Description                          |
|-----------|--------|---------------------------------------------------------------|
| `force`   | string | Required to be `true`, as resource does not support trashing. |
